--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title></title>
     </head>
     <body>
-        <<div>
+        <<div align="center">
             <<h1>Salut tout le monde</h1>
         </div>
     </body>
