--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <<div align="center">
-            <<h1>Salut tout le monde</h1>
+            <<h1 style="color: red;">Salut tout le monde</h1>
         </div>
     </body>
 </html>
